<resources>
    <string name="app_name">Pubg</string>
    <string name="programm">Программа была создана как подобие "Википедия" где вы сможете узнать что-то новое или вспомнить</string>
    <string name="i">Данную программу сделал Сушко Никита</string>
    <string name="gun1">израильское семейство автоматического оружия, дальнейшее развитие автомата Galil . Семейство состоит из автоматов ACE 2x (калибр 5,56x45 мм) и 3x (калибр 7,62x39 мм), а также автоматических винтовок 5x (калибр 7,62x51 мм), в свою очередь подразделяющихся на варианты, отличающиеся длиной ствола.</string>
    <string name="gun2">Steyr AUG (Armee Universal Gewehr — армейская универсальная винтовка) — комплекс стрелкового оружия, выпущенный в 1977 году австрийской компанией Steyr-Daimler-Puch (ныне Штайр Армс GmbH). В Австралии винтовка выпускается по лицензии под маркой F88. Имеет сменные стволы разной длины: основной 508 мм, а также укороченные стволы 350 мм и 407 мм и тяжёлый ствол 621 мм.</string>
    <string name="gun3">ОЦ-14 «Гроза» — российский штурмовой стрелково-гранатомётный комплекс, разработанный ЦКИБ СОО в 1993 году[3]. Представляет собой вариант автомата ОЦ-12 «Тисс» (в свою очередь созданного на базе АКС74У), выполненный по схеме булл-пап. На него устанавливается несколько упрощённый вариант съёмного подствольного гранатомёта ГП-25 «Костёр» (упрощение прежде всего заключается в отсутствии пистолетной рукоятки со спусковой скобой и спусковым крючком). Такая компоновка позволила создать компактное мощное оружие. Автоматный и гранатомётный огонь управляются единым спусковым крючком. Переключение режима «автомат-гранатомёт» осуществляется кнопочным переводчиком, расположенным на правой стороне ствольной коробки. Прицел открытого типа размещён на П-образной стойке, которая может служить для переноски оружия в руке[4]. Предусмотрена возможность установки глушителя, лазерного целеуказателя, оптического прицела и тактического фонаря. Комплекс унифицирован с АКС74У на 70 %,.</string>
    <string name="gun4">5,56-мм автомат M16 (официальное обозначение — Rifle, Caliber 5.56 mm, M16) — американская штурмовая винтовка[10] калибра 5,56 мм, разработанная и принятая на вооружение в 1960-х годах.
M16 и её модификации до настоящего времени остаются основным образцом стрелкового оружия всех пяти видов вооружённых сил, силовых структур и полицейских подразделений США, а равно и других стран мира. Это одна из наиболее распространённых моделей стрелкового оружия в мире — было выпущено более 8 миллионов экземпляров[5].</string>
    <string name="gun5">CMMG Mk47 Mutant - полуавтоматическая винтовка патронником 7,62 × 39 мм, производимая CMMG Inc. Он может принимать все типы магазинов образца автомата Калашникова, включая стальные, полимерные и барабанные магазины.</string>
    <string name="gun6">FN SCAR (англ. Special Operations Forces Combat Assault Rifle[11] — боевая штурмовая винтовка для сил специальных операций) — оружейная система, разработанная американским подразделением бельгийской компании FN Herstal для участия в конкурсе на создание нового автомата для бойцов USSOCOM в 2004 году.</string>
    <string name="gun7">Accuracy International AWM (Arctic Warfare Magnum) - британская снайперская винтовка, разработанная в компании Accuracy International под винтовочный патрон Magnum.
Комплектуется оптическим прицелом. Является частью линейки AW ( Arctic Warfare)</string>
    <string name="gun8">Русская 3-линейная (7,62-мм) винтовка Мосина образца 1891 года[3] — магазинная винтовка, принятая на вооружение Русской императорской армии в 1891 году. Так же известна и под другими названиями — 7,62-мм винтовка обр. 1891 г. (1891/30 гг.), трёхлинейка, винтовка Мосина, «Мосинка» и тому подобные. Название трёхлинейка происходит от калибра ствола винтовки, который равен трём линиям (устаревшая мера длины, равная одной десятой дюйма или 2,54 мм).</string>
    <string name="gun9">7,62-мм снайперская винтовка M24 (по техническим условиям: англ. rifle, 7.62mm, sniper w/ day optical sight and carrying cases, M24 — винтовка калибра 7,62 мм, снайперская с оптическим прицелом и футлярами, модель 24[1]; по тренировочному руководству: англ. M24 sniper weapon system — система снайперского вооружения модели 24[2]) — американская снайперская винтовка, созданная на основе Remington 700.</string>
    <string name="gun10">Микро-Узи — израильский малогабаритный пистолет-пулемёт, дальнейшая модернизация Uzi (после Мини-Узи). Аббревиатура «IMI» означает «Israel Military Industries» — фирму, его разработавшую и изначально производящую (но затем поглощённую «Israel Weapon Industries»). Обозначение «Micro-» даётся для отличия от IMI Mini Uzi, выпущенного ранее, само же слово Uzi произошло от имени его конструктора Узиэля Галя, хотя сам Галь в разработке модификаций своего изобретения участие не принимал.</string>
    <string name="gun11">FN P90 — бельгийский пистолет-пулемёт (персональное оружие самообороны), разработанный в 1986—1987 годах фирмой FN Herstal. Был разработан, в первую очередь, для танкистов и водителей боевых автомобилей и машин. Специально для P90 был разработан патрон типа 5,7×28 мм SS190[7], обладающий высокой пробивной мощностью и низкой степенью рикошетирования. Пуля данного патрона развивает дульную скорость до 715 м/с и способна пробить титан/кевларовый броневой жилет, соответствующий требованиям НАТО CRISAT до 20 метров</string>
    <string name="gun12">KRISS Vector — пистолет-пулемёт, разработанный компанией «Transformational Defense Industries». Использует систему полусвободного затвора, направляющую движимую отдачей затворную группу вниз под большим углом. Эта система называется Kriss Super V.</string>
    <string name="gun13">Пистолет-пулемёт Томпсона (англ. Thompson submachine gun) — американский пистолет-пулемёт, изобретённый в 1918 году Джоном Тальяферро Томпсоном. Свою славу это оружие приобрело во время Сухого закона в США, став самым распространённым и любимым оружием не только среди офицеров полиции, но и членов различных американских преступных группировок.</string>
    <string name="pubg">Что такое PLAYERUNKNOWNS BATTLEGROUNDS? PLAYERUNKNOWNS BATTLEGROUNDS или более широко называемая "PUBG" - это многосерийная франшиза, которая разветвляется от соревновательных шутеров на выживание (PUBG) до видеоигр в жанре survival horror (The Callisto Protocol). Основные знания PUBG основаны на вымышленном острове под названием Эрангель, где жители принимают участие в Королевских битвах 1 против 100 или отряд против отряда.
     выпущенная 23 марта 2017 года для Steam. Примерно год спустя PUBG была выпущена на Xbox One 4 сентября 2018 года, а позже 7 декабря 2018 года для PlayStation 4. 12 января 2022 года PUBG перешла на бесплатную 2-игровую модель.</string>
</resources>