<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gans">

    <ScrollView
        android:layout_width="359dp"
        android:layout_height="685dp"

        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            tools:context=".Main2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="В игре есть такие оружия как"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="327dp"
                android:layout_height="140dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ace32" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ACE32"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gun1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="327dp"
                android:layout_height="140dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/groza" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Groza"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gun3"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="327dp"
                android:layout_height="140dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/auga3" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AugA3"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gun2"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="327dp"
                android:layout_height="140dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/m16a4" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="M16A4"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gun4"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="327dp"
                android:layout_height="140dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/mk47mutant" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MK47Mutant"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gun5"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="327dp"
                android:layout_height="140dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/scar" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Scar"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gun6"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="327dp"
                android:layout_height="140dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/awm" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AWM"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gun7"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="327dp"
                android:layout_height="140dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/mosinnagant" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MosinNaganat"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gun8"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="327dp"
                android:layout_height="140dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/m24" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="M24"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gun9"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="327dp"
                android:layout_height="140dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/uzi" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="UZI"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gun10"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="327dp"
                android:layout_height="140dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/p90" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="P90"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gun11"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="327dp"
                android:layout_height="140dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/vector" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vector"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gun12"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="327dp"
                android:layout_height="140dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/thompson" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thompson"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gun13"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="vihod"
        android:text="Выйти"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>